infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-srv
spec:
    type: NodePort
    selector:
        app: posts
    ports: # the whole ports section is very copy-pasteable
        - name: posts
          protocol: TCP
          port: 4000 # the port on the Node Port service
          targetPort: 4000 # the actual port on the Pod
